@@ -1,3 +1,9 @@
+1652.	[security]		tmark
+	Replaced asserts with exception throws to catch parser errors
+	that can occur handling malformed hostname name and FQDN options.
+	CVE:2019-6473
+	(Gitlab #730,!2-p git TBD)
+
 1651.	[security]		tmark
 	Added logic to kea-dhcp6 to catch values for client or
 	server DUIDs that exceed 128 bytes to inbound packet
